trying to fix font on smaller screens

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -676,7 +676,7 @@ section {
     display: flex;
     justify-content: center;
     width: 70%;
-    font-size: 1.3rem;
+    font-size: clamp(1.3rem, 2vw, 1.5rem);
     margin: 0 auto;
     text-align: center;
     margin-bottom: 2rem;
@@ -729,7 +729,6 @@ section {
     display: flex;
     flex-direction: column;
     text-align: center;
-    font-size: 1.3rem;
     flex: 1 1 calc(33.33% - 2rem);
     max-width: 100%;
 }
@@ -751,9 +750,9 @@ section {
     gap: 2rem;
     align-items: flex-start;
     justify-content: center;
+    text-align: center;
     margin-bottom: 2rem;
     flex-wrap: wrap;
-    border: green solid 2px;
 }
 
 /* wireframe for galaxy specifically */
@@ -873,11 +872,12 @@ section {
     width: 100%;
     height: 100%;
     text-align: center;
+    justify-content: center;
+    align-items: center;
     line-height: 2;
     display: flex;
     flex-direction: column;
     padding-top: 20%;
-    border: blue solid 2px;
 
 }
 
@@ -887,11 +887,8 @@ section {
     gap: 3rem;
     width: 25%;
     height: 32rem;
-    margin-top: 2rem;
-    margin-right: 3rem;
     width: 50%;
     height: auto;
-    border: pink solid 2px;
 }
 
 .fig-box {
@@ -912,7 +909,7 @@ section {
 }
 
 .wf-title {
-    font-size: 4rem;
+    font-size: clamp(4rem, 5vw, 6rem);
     font-weight: 750;
     text-align: center;
     margin-top: 5rem;
@@ -947,7 +944,7 @@ section {
     display: flex;
     text-align: center;
     line-height: 2;
-    font-size: 1.3rem;
+    font-size: clamp(1.3rem, 2vw, 1.5rem);
 }
 
 .prob-img {
@@ -962,7 +959,7 @@ section {
     display: flex;
     text-align: center;
     line-height: 2;
-    font-size: 1.3rem;
+    font-size: clamp(1rem, 2vw, 2rem);
 }
 
 .learned-img {
@@ -985,11 +982,11 @@ section {
     justify-content: center;
     align-items: center;
     height: 8%;
-    font-size: 1.3rem;
+    font-size: clamp(1rem, 2vw, 2rem);
 }
 
 .stat-title.lg {
-    font-size: 1.8rem !important;
+    font-size: clamp(1.8rem, 2vw, 2.2rem) !important;
 }
 
 .galaxy-box {
@@ -1084,7 +1081,7 @@ b {
 
 /* greengrid stuff */
 .greengrid-txt {
-    font-size: 4rem;
+    font-size: clamp(1.5rem, 3vw, 2rem);
     font-weight: 200;
     font-family: "Urbanist", sans-serif;
     color: #828c45;
